syntax = "proto3";

// Package common defines commonly used types agnostic to the node role on the Sonr network.
package sonrio.motor.core.v1;
option go_package = "github.com/sonr-io/sonr/internal/motor/x/core/v1";

// Shared Metadata for Messages on all Protocols
message Metadata {
  // Unix timestamp
  int64 timestamp = 1;

  // Node ID
  string node_id = 2;

  // Signature of the message
  bytes signature = 3;

  // Public Key of the message sender
  bytes public_key = 4;
}

// Basic Info Sent to Peers to Establish Connections
message Peer {
  string did = 1;       // User Sonr Domain
  Status status = 2;      // Peer Status
  string user_agent = 3; // User Agent
  int64 last_seen = 4; // Last Modified Timestamp

  // Peer Info for Device
  message Device {
    string id = 1;       // Peer Device ID
    string host_name = 2; // Peer Host Name
    string os = 3;       // Peer Operating System
    string arch = 4;     // Peer Architecture
    string model = 5;    // Peers Device Model
  }

  // Peers Active Status
  enum Status {
    STATUS_UNSPECIFIED = 0; // Offline - Not Online or Not a Full Node
    STATUS_ONLINE = 1;  // Online - Full Node Available
    STATUS_AWAY = 2;    // Away - Not Online, but has a full node
    STATUS_BUSY = 3;    // Busy - Online, but busy with Transfer
  }
}
